use the temp daktilo

--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,21 @@
 # Site settings
-title: A way to Data Scientist 
-email: anyinlover@gmail.com 
-description: > # this means to ignore newlines until "baseurl:"
-  Find a way to become a data scientist by self-study.
+title: Daktilo
+description: >
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
+
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://anyinlover.github.io" # the base hostname & protocol for your site
-github_username:  anyinlover
+url: "http://hitchhiker.ma" # the base hostname & protocol for your site
+
+author:
+  fullname: Motaquillah Maddane
+  googleplus: https://www.google.com/+MotaquillahMaddane
+  github: kronik3r
+  twitter: electrik_frog
+  # disqus: your_disqus_username
+
+# google_analytics: 'UA-XXXXXXXX-X'
 
 # Build settings
 markdown: kramdown
-
-# Outputting
-permalink: date
