--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,16 @@
 # Site settings
-title: Daktilo
+title: A way to Data Scientist
+email: anyinlover@gmail.com
 description: >
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-
+ Find a way to become a data scientist by self-study.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://hitchhiker.ma" # the base hostname & protocol for your site
+url: "http://anyinlover.github.io" # the base hostname & protocol for your site
 
 author:
-  fullname: Motaquillah Maddane
-  googleplus: https://www.google.com/+MotaquillahMaddane
-  github: kronik3r
-  twitter: electrik_frog
+  fullname: anyinlover
+  # googleplus: https://www.google.com/+MotaquillahMaddane
+  github: anyinlover
+  # twitter: electrik_frog
   # disqus: your_disqus_username
 
 # google_analytics: 'UA-XXXXXXXX-X'
