--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Anyinlover Blog
 SEOTitle: 木公的博客 | Anyinlover Blog
 #header-img: img/home-bg.jpg
-email: anyinlover@gmail.com
+email: guhangsong@gmail.com
 description: "在这里探索数据，发现真理"
 keyword: "Anyinlover, 机器学习, 数据挖掘"
 url: "http://anyinlover.github.io"              # your host, for absolute URL
