--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.5.10",
     "@astrojs/mdx": "^2.3.1",
     "@astrojs/rss": "^4.0.5",
     "@astrojs/sitemap": "^3.1.4",
     "astro": "^4.7.1",
-    "@astrojs/check": "^0.5.10",
+    "rehype-katex": "^7.0.0",
+    "remark-math": "^6.0.0",
     "typescript": "^5.4.5"
   }
 }
