--- a/uncollects/learn_by_do/torch_lab/pyproject.toml
+++ b/uncollects/learn_by_do/torch_lab/pyproject.toml
@@ -5,5 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "numpy>=2.2.5",
     "torch>=2.7.0",
+    "torchvision>=0.22.0",
 ]
